@@ -3,78 +3,148 @@ package com.unqiuehire.kashflow.serviceImpl;
 import com.unqiuehire.kashflow.constant.ApiStatus;
 import com.unqiuehire.kashflow.constant.ApplicationStatus;
 import com.unqiuehire.kashflow.constant.LoanPlanStatus;
+import com.unqiuehire.kashflow.dto.requestdto.LoanApplicationApprovalRequestDto;
 import com.unqiuehire.kashflow.dto.requestdto.LoanApplicationRequestDto;
 import com.unqiuehire.kashflow.dto.responsedto.ApiResponse;
 import com.unqiuehire.kashflow.dto.responsedto.LoanApplicationResponseDto;
 import com.unqiuehire.kashflow.entity.Borrower;
+import com.unqiuehire.kashflow.entity.Lender;
 import com.unqiuehire.kashflow.entity.LoanApplication;
 import com.unqiuehire.kashflow.entity.LoanPlan;
 import com.unqiuehire.kashflow.exception.ResourceNotFoundException;
 import com.unqiuehire.kashflow.repository.BorrowerRepository;
+import com.unqiuehire.kashflow.repository.LenderRepository;
 import com.unqiuehire.kashflow.repository.LoanApplicationRepository;
 import com.unqiuehire.kashflow.repository.LoanPlanRepository;
 import com.unqiuehire.kashflow.service.LoanApplicationService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.Period;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class LoanApplicationServiceImpl implements LoanApplicationService {
 
-    private final LoanApplicationRepository repository;
+    private final LoanApplicationRepository loanApplicationRepository;
     private final LoanPlanRepository loanPlanRepository;
     private final BorrowerRepository borrowerRepository;
+    private final LenderRepository lenderRepository;
 
     @Override
-    public ApiResponse<LoanApplicationResponseDto> createApplication(LoanApplicationRequestDto dto) {
+    public ApiResponse<LoanApplicationResponseDto> applyLoan(Long lenderId, LoanApplicationRequestDto requestDto) {
 
-        if (dto == null) {
+        if (requestDto == null) {
             return new ApiResponse<>(ApiStatus.FAILURE, "Loan application request cannot be null", null);
         }
 
-        if (dto.getBorrowerId() == null) {
+        if (requestDto.getBorrowerId() == null) {
             return new ApiResponse<>(ApiStatus.FAILURE, "Borrower id is required", null);
         }
 
-        if (dto.getPlanId() == null) {
+        if (requestDto.getPlanId() == null) {
             return new ApiResponse<>(ApiStatus.FAILURE, "Plan id is required", null);
         }
 
-        if (dto.getLoanAmount() == null || dto.getLoanAmount() <= 0) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Loan amount must be greater than 0", null);
+        if (requestDto.getLoanAmount() == null || requestDto.getLoanAmount() <= 0) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Loan amount must be greater than zero", null);
         }
 
-        Borrower borrower = borrowerRepository.findById(dto.getBorrowerId())
+        if (requestDto.getAge() == null || requestDto.getAge() <= 0) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Valid age is required", null);
+        }
+
+        if (requestDto.getMonthlyIncome() == null || requestDto.getMonthlyIncome() <= 0) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Valid monthly income is required", null);
+        }
+
+        if (requestDto.getEmployeeType() == null) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Employee type is required", null);
+        }
+
+        if (requestDto.getPinCode() == null || requestDto.getPinCode().trim().isEmpty()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Pin code is required", null);
+        }
+
+        if (requestDto.getIsEducated() == null) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Education value is required", null);
+        }
+
+        if (requestDto.getCollateral() == null || requestDto.getCollateral().trim().isEmpty()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Collateral is required for all borrowers", null);
+        }
+
+        if (Boolean.TRUE.equals(requestDto.getIsEducated())
+                && (requestDto.getCertificates() == null || requestDto.getCertificates().trim().isEmpty())) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Certificates are required for educated borrower", null);
+        }
+
+        Borrower borrower = borrowerRepository.findById(requestDto.getBorrowerId())
                 .orElseThrow(() -> new ResourceNotFoundException("Borrower not found"));
 
-        LoanPlan plan = loanPlanRepository.findById(dto.getPlanId())
-                .orElseThrow(() -> new ResourceNotFoundException("Loan Plan not found"));
+        Lender lender = lenderRepository.findById(lenderId)
+                .orElseThrow(() -> new ResourceNotFoundException("Lender not found"));
+
+        LoanPlan loanPlan = loanPlanRepository.findById(requestDto.getPlanId())
+                .orElseThrow(() -> new ResourceNotFoundException("Loan plan not found"));
 
         if (Boolean.FALSE.equals(borrower.getIsActive())) {
             return new ApiResponse<>(ApiStatus.FAILURE, "Inactive borrower cannot apply for loan", null);
         }
 
-        if (plan.getStatus() != LoanPlanStatus.ACTIVE) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "This loan plan is not active", null);
+        if (Boolean.FALSE.equals(lender.getIsActive())) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Inactive lender cannot receive loan applications", null);
         }
 
-        if (dto.getLoanAmount() > plan.getAmount()) {
+        if (loanPlan.getStatus() != LoanPlanStatus.ACTIVE) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Loan plan is not active", null);
+        }
+
+        if (loanPlan.getLender() == null || !loanPlan.getLender().getLenderId().equals(lenderId)) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Lender mismatch with loan plan", null);
+        }
+
+        if (requestDto.getLenderId() != null && !requestDto.getLenderId().equals(lenderId)) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Request lender id does not match path lender id", null);
+        }
+
+        if (requestDto.getLoanAmount() > loanPlan.getAmount()) {
             return new ApiResponse<>(ApiStatus.FAILURE, "Requested loan amount exceeds loan plan amount", null);
         }
 
-        if (borrower.getCibil() == null) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Borrower CIBIL is missing", null);
+//        Integer actualAge = Period.between(borrower.getDateOfBirth(), LocalDate.now()).getYears();
+//        if (!actualAge.equals(requestDto.getAge())) {
+//            return new ApiResponse<>(ApiStatus.FAILURE, "Provided age does not match borrower date of birth", null);
+//        }
+
+        if (requestDto.getAge() < loanPlan.getMinAge() || requestDto.getAge() > loanPlan.getMaxAge()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Borrower age is not eligible for this plan", null);
         }
 
-        if (borrower.getCibil() < plan.getMinCibil()) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Borrower does not meet minimum CIBIL for this plan", null);
+        if (requestDto.getMonthlyIncome() < loanPlan.getMinMonthlyIncome()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Monthly income is below minimum required", null);
         }
 
-        boolean alreadyPending = repository.existsByBorrower_BorrowerIdAndLoanPlan_IdAndStatus(
+        if (!requestDto.getEmployeeType().equals(loanPlan.getEmployeeType())) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Employee type is not matching with loan plan", null);
+        }
+
+        if (!requestDto.getPinCode().equals(loanPlan.getServicePinCode())) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Borrower pin code is outside lender service area", null);
+        }
+
+        if (!borrower.getPincode().equals(requestDto.getPinCode())) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Application pin code does not match borrower registered pin code", null);
+        }
+
+        boolean alreadyPending = loanApplicationRepository.existsByBorrower_BorrowerIdAndLoanPlan_IdAndStatus(
                 borrower.getBorrowerId(),
-                plan.getId(),
+                loanPlan.getId(),
                 ApplicationStatus.PENDING
         );
 
@@ -82,69 +152,172 @@ public class LoanApplicationServiceImpl implements LoanApplicationService {
             return new ApiResponse<>(ApiStatus.FAILURE, "Borrower already has a pending application for this plan", null);
         }
 
-        LoanApplication app = new LoanApplication();
-        app.setBorrower(borrower);
-        app.setLoanPlan(plan);
-        app.setLoanAmount(dto.getLoanAmount());
-        app.setStatus(ApplicationStatus.PENDING);
-        app.setIsLoanCreated(false);
+        LoanApplication application = new LoanApplication();
+        application.setBorrower(borrower);
+        application.setLender(lender);
+        application.setLoanPlan(loanPlan);
+        application.setLoanAmount(requestDto.getLoanAmount());
+        application.setAge(requestDto.getAge());
+        application.setMonthlyIncome(requestDto.getMonthlyIncome());
+        application.setEmploymentType(requestDto.getEmployeeType());
+        application.setPinCode(requestDto.getPinCode());
+        application.setIsEducated(requestDto.getIsEducated());
+        application.setCertificates(requestDto.getCertificates());
+        application.setCollateral(requestDto.getCollateral());
+        application.setStatus(ApplicationStatus.PENDING);
+        application.setApplicationDate(LocalDate.now());
+        application.setAppliedAt(LocalDateTime.now());
+        application.setCreatedAt(LocalDateTime.now());
+        application.setIsLoanCreated(false);
+        application.setRejectionReason(null);
 
-        LoanApplication saved = repository.save(app);
+        LoanApplication saved = loanApplicationRepository.save(application);
 
         return new ApiResponse<>(
                 ApiStatus.SUCCESS,
-                "Loan application created successfully",
+                "Loan application submitted successfully",
                 mapToDto(saved)
         );
     }
 
     @Override
-    public ApiResponse<LoanApplicationResponseDto> getById(Long id) {
-        LoanApplication app = repository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Application not found"));
+    public ApiResponse<LoanApplicationResponseDto> updateLoanDecision(Long applicationId, LoanApplicationApprovalRequestDto requestDto) {
 
-        return new ApiResponse<>(ApiStatus.SUCCESS, "Loan application fetched successfully", mapToDto(app));
+        LoanApplication application = loanApplicationRepository.findById(applicationId)
+                .orElseThrow(() -> new ResourceNotFoundException("Loan application not found"));
+
+        if (requestDto == null) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Approval request cannot be null", null);
+        }
+
+        if (requestDto.getApplicationStatus() == null) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Application status is required", null);
+        }
+
+        if (application.getStatus() != ApplicationStatus.PENDING) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Only pending applications can be approved or rejected", null);
+        }
+
+        if (requestDto.getApplicationStatus() != ApplicationStatus.APPROVED
+                && requestDto.getApplicationStatus() != ApplicationStatus.REJECTED) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Only APPROVED or REJECTED status is allowed", null);
+        }
+
+        application.setStatus(requestDto.getApplicationStatus());
+
+        if (requestDto.getApplicationStatus() == ApplicationStatus.REJECTED) {
+            if (requestDto.getRemarks() == null || requestDto.getRemarks().trim().isEmpty()) {
+                return new ApiResponse<>(ApiStatus.FAILURE, "Rejection reason is required when application is rejected", null);
+            }
+            application.setRejectionReason(requestDto.getRemarks());
+        } else {
+            application.setRejectionReason(null);
+        }
+
+        LoanApplication updated = loanApplicationRepository.save(application);
+
+        return new ApiResponse<>(
+                ApiStatus.SUCCESS,
+                "Loan application decision updated successfully",
+                mapToDto(updated)
+        );
+    }
+
+    @Override
+    public ApiResponse<LoanApplicationResponseDto> getApplicationById(Long applicationId) {
+        Optional<LoanApplication> optional = loanApplicationRepository.findById(applicationId);
+        if (optional.isEmpty()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Loan application not found", null);
+        }
+
+        return new ApiResponse<>(ApiStatus.SUCCESS, "Loan application fetched successfully", mapToDto(optional.get()));
+    }
+
+    @Override
+    public ApiResponse<List<LoanApplicationResponseDto>> getApplicationsByLenderId(Long lenderId) {
+        List<LoanApplicationResponseDto> applications = loanApplicationRepository.findByLender_LenderId(lenderId)
+                .stream()
+                .map(this::mapToDto)
+                .toList();
+
+        return new ApiResponse<>(
+                ApiStatus.SUCCESS,
+                "Lender loan applications fetched successfully",
+                applications
+        );
+    }
+
+    @Override
+    public ApiResponse<List<LoanApplicationResponseDto>> getApplicationsByBorrowerId(Long borrowerId) {
+        List<LoanApplicationResponseDto> applications = loanApplicationRepository.findByBorrower_BorrowerId(borrowerId)
+                .stream()
+                .map(this::mapToDto)
+                .toList();
+
+        return new ApiResponse<>(
+                ApiStatus.SUCCESS,
+                "Borrower loan applications fetched successfully",
+                applications
+        );
+    }
+
+    @Override
+    public ApiResponse<LoanApplicationResponseDto> createApplication(LoanApplicationRequestDto dto) {
+        if (dto == null) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Loan application request cannot be null", null);
+        }
+
+        if (dto.getLenderId() == null) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Lender id is required", null);
+        }
+
+        return applyLoan(dto.getLenderId(), dto);
+    }
+
+    @Override
+    public ApiResponse<LoanApplicationResponseDto> getById(Long id) {
+        return getApplicationById(id);
     }
 
     @Override
     public ApiResponse<List<LoanApplicationResponseDto>> getByBorrower(Long borrowerId) {
-        List<LoanApplicationResponseDto> list = repository.findByBorrower_BorrowerId(borrowerId)
+        List<LoanApplicationResponseDto> list = loanApplicationRepository.findByBorrower_BorrowerId(borrowerId)
                 .stream()
                 .map(this::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
 
-        return new ApiResponse<>(ApiStatus.SUCCESS, "Borrower loan applications fetched successfully", list);
+        return new ApiResponse<>(ApiStatus.SUCCESS, "Borrower applications fetched successfully", list);
     }
 
     @Override
     public ApiResponse<List<LoanApplicationResponseDto>> getByLender(Long lenderId) {
-        List<LoanApplicationResponseDto> list = repository.findByLoanPlan_Lender_LenderId(lenderId)
+        List<LoanApplicationResponseDto> list = loanApplicationRepository.findByLender_LenderId(lenderId)
                 .stream()
                 .map(this::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
 
-        return new ApiResponse<>(ApiStatus.SUCCESS, "Lender loan applications fetched successfully", list);
+        return new ApiResponse<>(ApiStatus.SUCCESS, "Lender applications fetched successfully", list);
     }
 
     @Override
     public ApiResponse<String> cancelApplication(Long id) {
-        LoanApplication app = repository.findById(id)
+        LoanApplication application = loanApplicationRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Application not found"));
 
-        if (app.getStatus() == ApplicationStatus.APPROVED) {
+        if (application.getStatus() == ApplicationStatus.APPROVED) {
             return new ApiResponse<>(ApiStatus.FAILURE, "Approved application cannot be cancelled", null);
         }
 
-        if (app.getStatus() == ApplicationStatus.REJECTED) {
+        if (application.getStatus() == ApplicationStatus.REJECTED) {
             return new ApiResponse<>(ApiStatus.FAILURE, "Rejected application cannot be cancelled", null);
         }
 
-        if (app.getStatus() == ApplicationStatus.CANCELLED) {
+        if (application.getStatus() == ApplicationStatus.CANCELLED) {
             return new ApiResponse<>(ApiStatus.FAILURE, "Application is already cancelled", null);
         }
 
-        app.setStatus(ApplicationStatus.CANCELLED);
-        repository.save(app);
+        application.setStatus(ApplicationStatus.CANCELLED);
+        loanApplicationRepository.save(application);
 
         return new ApiResponse<>(ApiStatus.SUCCESS, "Loan application cancelled successfully", "ID: " + id);
     }
@@ -153,14 +326,20 @@ public class LoanApplicationServiceImpl implements LoanApplicationService {
         LoanApplicationResponseDto dto = new LoanApplicationResponseDto();
 
         dto.setApplicationId(app.getApplicationId());
-        dto.setBorrowerId(app.getBorrower().getBorrowerId());
-        dto.setPlanId(app.getLoanPlan().getId());
-        dto.setLenderId(app.getLoanPlan().getLender().getLenderId());
+        dto.setBorrowerId(app.getBorrower() != null ? app.getBorrower().getBorrowerId() : null);
+        dto.setLenderId(app.getLender() != null ? app.getLender().getLenderId() : null);
+        dto.setPlanId(app.getLoanPlan() != null ? app.getLoanPlan().getId() : null);
         dto.setLoanAmount(app.getLoanAmount());
-        dto.setStatus(app.getStatus().name());
-        dto.setApplicationDate(app.getApplicationDate() != null ? app.getApplicationDate().toString() : null);
-        dto.setRejectionReason(app.getRejectionReason());
-        dto.setIsLoanCreated(app.getIsLoanCreated());
+        dto.setAge(app.getAge());
+        dto.setMonthlyIncome(app.getMonthlyIncome());
+        dto.setEmployeeType(app.getEmploymentType());
+        dto.setPinCode(app.getPinCode());
+        dto.setIsEducated(app.getIsEducated());
+        dto.setCertificates(app.getCertificates());
+        dto.setCollateral(app.getCollateral());
+        dto.setApplicationStatus(app.getStatus());
+        dto.setRemarks(app.getRejectionReason());
+        dto.setAppliedAt(app.getAppliedAt());
 
         return dto;
     }
